--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
+    "dev": "nodemon",
     "start": "ts-node src/index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -16,18 +17,27 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "husky": {
     "hooks": {
-        "pre-commit": "npm lint && npm prettier"
+      "pre-commit": "npm lint && npm prettier"
     }
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
+    "fastify": "^4.17.0",
+    "lodash": "^4.17.21"
   }
 }
