--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier": "prettier --check src/**/*.ts",
-    "format": "prettier --write src/**/*ts"
+    "format": "prettier --write src/**/*ts",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -28,11 +29,6 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm lint && npm prettier"
-    }
   },
   "dependencies": {
     "axios": "^1.4.0",
