--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@fastify/static": "^6.10.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "fastify": "^4.17.0",
