--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,12 @@
     "env": {
         "node": true
     },
-    "plugins": ["@typescript-eslint"]
+    "plugins": ["@typescript-eslint", "simple-import-sort", "import"],
+    "rules": {
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "import/first": "error",
+        "import/newline-after-import": "error",
+        "import/no-duplicates": "error"
+    }
 }
