--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "f1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "nodemon",
-    "start": "ts-node src/index.ts",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "prettier": "prettier --check src/**/*.ts",
-    "format": "prettier --write src/**/*ts",
-    "prepare": "husky install"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@tsconfig/node18": "^2.0.1",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^8.42.0",
-    "husky": "^8.0.3",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "@fastify/static": "^6.10.2",
-    "@fastify/type-provider-typebox": "^3.2.0",
-    "@sinclair/typebox": "^0.28.15",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.8",
-    "fastify": "^4.17.0",
-    "lodash": "^4.17.21"
-  }
+    "name": "f1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc -p tsconfig.json",
+        "dev": "nodemon",
+        "start": "ts-node src/index.ts",
+        "lint": "eslint src/**/*.ts && eslint src/*.ts",
+        "lint:fix": "eslint src/**/*.ts --fix && eslint src/*.ts --fix",
+        "prettier": "prettier --check src/**/*.ts && prettier --check src/*.ts",
+        "format": "prettier --write src/**/*ts && prettier --write src/*.ts",
+        "prepare": "husky install"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@tsconfig/node18": "^2.0.1",
+        "@types/lodash": "^4.14.195",
+        "@types/node": "^20.2.5",
+        "@typescript-eslint/eslint-plugin": "^5.59.9",
+        "@typescript-eslint/parser": "^5.59.9",
+        "eslint": "^8.42.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "husky": "^8.0.3",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.3"
+    },
+    "dependencies": {
+        "@fastify/autoload": "^5.7.1",
+        "@fastify/static": "^6.10.2",
+        "@fastify/swagger": "^8.5.1",
+        "@fastify/swagger-ui": "^1.9.0",
+        "@fastify/type-provider-typebox": "^3.2.0",
+        "@sinclair/typebox": "^0.28.15",
+        "axios": "^1.4.0",
+        "dayjs": "^1.11.8",
+        "fastify": "^4.17.0",
+        "lodash": "^4.17.21"
+    }
 }
